# ml-framework

./: .gitignore  config.yaml  main.py  pyproject.toml  readme.md
cleaning/: functions.py  registry.py  runner.py
data_exploration/checks/: base_check.py  count_nulls.py
modelling/: dummy_classifier.py  logistic_regression.py  registry.py  runner.py  utils.py
src/heart_disease_analysis/preprocessing/: functions.py  logistic_regression_oldpeak.py  runner.py
src/heart_disease_analysis/utils/: utils.py
