[project]
name = "heart-disease-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Warren Davies"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]
packages = [{include = "heart_disease_analysis", from = "src"}]
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
